# opengl-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS.txt  LICENSE  README.md
assets/: font.csv  font_layout.csv
assets/meshes/: smile.mtl
assets/shaders/: classic_frag.glsl  classic_vert.glsl  common.glsl  frag.glsl  lighting.glsl  particle_frag.glsl  particle_vert.glsl  skybox_procedural_frag.glsl  skybox_procedural_vert.glsl  skybox_starfield_frag.glsl  skybox_tex_frag.glsl  skybox_tex_vert.glsl  text_shader_frag.glsl  text_shader_vert.glsl  ui_shader_frag.glsl  ui_shader_vert.glsl  vert.glsl
assets/textures/: dfg.hdr  ui_text.tga
src/: CMakeLists.txt  game_layer.cpp  game_layer.hpp  imgui_extensions.cpp  imgui_extensions.hpp  implementations.cpp  main.cpp
src/arkanoid/: arkanoid_game.cpp  arkanoid_layer.cpp  arkanoid_layer.hpp  arkanoid_resource_management.cpp  breakanoid_layer.cpp  breakanoid_layer.hpp
src/arkanoid/logic/: brick.cpp  brick.hpp  graphics_mode.cpp  graphics_mode.hpp  leaderboard.cpp  leaderboard.hpp  level_handler.cpp  level_handler.hpp  paddle.cpp  paddle.hpp  ui_stuff.cpp  ui_stuff.hpp
src/arkanoid/scenes/: arkanoid_game.cpp  arkanoid_menu.cpp
src/b2debug/: debug_draw.cpp  debug_draw.hpp
src/engine/: app.cpp  app.hpp  core.hpp  events.cpp  events.hpp  ilayer.cpp  ilayer.hpp  layerstack.cpp  layerstack.hpp  log.cpp  log.hpp  refcounter.hpp  window.cpp  window.hpp
src/engine/debug/: imgui_layer.cpp  imgui_layer.hpp
src/engine/events/: application_event.hpp  event.hpp  keyboard_event.hpp  mouse_event.hpp
src/engine/gpu/: device_manager.cpp  device_manager.hpp  ibuffer.hpp  idevice.hpp  itexture.hpp  itypes.hpp
src/engine/gpu/gl/: context.hpp  glbuffer.cpp  gldevice.cpp  gldevice.hpp  glmappings.cpp  glmappings.hpp  gltexture.cpp
src/engine/input/: input_enums.cpp  input_enums.hpp  input_manager.cpp  input_manager.hpp
src/engine/managers/: asset_manager.cpp  asset_manager.hpp
src/engine/physics/: physics_components.cpp  physics_components.hpp
src/engine/renderer/: camera.cpp  camera.hpp  light.hpp  material.cpp  material.hpp  mesh.hpp  particle_system.cpp  particle_system.hpp  scene_composer.cpp  scene_composer.hpp  scene_graph.cpp  scene_graph.hpp  scene_renderer.cpp  scene_renderer.hpp  scene_updater.cpp  scene_updater.hpp  scene_updater_debug.cpp  skybox.cpp  skybox.hpp  text_renderer.cpp  text_renderer.hpp  ui_components.cpp  ui_components.hpp
